bison/parser.output
Terminals unused in grammar

    BOOLEAN
    DOUBLE
    INT
    LIST
    RETURN
    POW
    NUMBER
    BINARY
    ROMAN
    STR
    KEYWORD
    DATA_TYPE
    SPECIAL_CHAR


State 0 conflicts: 10 shift/reduce
State 8 conflicts: 2 shift/reduce
State 18 conflicts: 1 shift/reduce
State 45 conflicts: 10 shift/reduce
State 47 conflicts: 10 shift/reduce
State 72 conflicts: 1 shift/reduce
State 75 conflicts: 1 shift/reduce
State 89 conflicts: 10 shift/reduce
State 91 conflicts: 10 shift/reduce


Grammar

    0 $accept: START $end

    1 START: START instruction
    2      | instruction
    3      | START statement EOL
    4      | START DEFINE ID '(' symlist ')' ASSIGN list EOL
    5      | START error EOL
    6      | ε

    7 instruction: statement

    8 statements: statement
    9           | statements statement

   10 statement: WHETHER expression THEN list
   11          | WHETHER expression THEN list OTHERWISE list
   12          | WHEN expression UNTIL list
   13          | whether
   14          | when
   15          | from
   16          | shift
   17          | expression ASSIGN expression
   18          | expression

   19 list: ε
   20     | statement ';' list
   21     | statement

   22 whether: WHETHER '(' condition ')' '%' statements '%' OTHERWISE '%' statements '%'

   23 when: WHEN '(' condition ')' '%' statements '%' UNTIL '(' condition ')'

   24 from: FROM expression TO expression ';' STEP expression '%' statements '%'

   25 shift: SHIFT '(' expression ')' '%' EVENT '(' condition ')' ASSIGN expression '%'

   26 condition: expression EQ expression
   27          | expression NOTEQUAL expression
   28          | expression GT expression
   29          | expression GE expression
   30          | expression LT expression
   31          | expression LE expression

   32 expression: expression CMP expression
   33           | expression PLUS expression
   34           | expression MINUS expression
   35           | expression MUL expression
   36           | expression DIV expression
   37           | ABS expression ABS
   38           | MINUS expression
   39           | '(' expression ')'
   40           | NUM
   41           | ID
   42           | ID ASSIGN expression
   43           | FUNC '(' explist ')'
   44           | ID '(' explist ')'

   45 explist: expression
   46        | expression ',' explist

   47 symlist: ID
   48        | ID ',' symlist


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 22 23 24 25
    '(' (40) 4 22 23 25 39 43 44
    ')' (41) 4 22 23 25 39 43 44
    ',' (44) 46 48
    ';' (59) 20 24
    error (256) 5
    BOOLEAN (258)
    DOUBLE (259)
    INT (260)
    LIST (261)
    STEP (262) 24
    TO (263) 24
    FROM (264) 24
    WHEN (265) 12 23
    OTHERWISE (266) 11 22
    WHETHER (267) 10 11 22
    RETURN (268)
    DEFINE (269) 4
    UNTIL (270) 12 23
    SHIFT (271) 25
    EVENT (272) 25
    EOL (273) 3 4 5
    THEN (274) 10 11
    PLUS <op> (275) 33
    MINUS <op> (276) 34 38
    MUL <op> (277) 35
    DIV <op> (278) 36
    EQ <op> (279) 26
    GT <op> (280) 28
    GE <op> (281) 29
    LT <op> (282) 30
    LE <op> (283) 31
    POW <op> (284)
    NOTEQUAL <op> (285) 27
    ASSIGN <op> (286) 4 17 25 42
    ABS <op> (287) 37
    NUMBER <num> (288)
    NUM <num> (289) 40
    BINARY <num> (290)
    ROMAN <num> (291)
    STR <st> (292)
    ID <st> (293) 4 41 42 44 47 48
    KEYWORD <st> (294)
    DATA_TYPE <st> (295)
    SPECIAL_CHAR <st> (296)
    FUNC <fn> (297) 43
    CMP <fn> (298) 32
    UMINUS (299)


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    START (51)
        on left: 1 2 3 4 5 6
        on right: 0 1 3 4 5
    instruction (52)
        on left: 7
        on right: 1 2
    statements <a> (53)
        on left: 8 9
        on right: 9 22 23 24
    statement <a> (54)
        on left: 10 11 12 13 14 15 16 17 18
        on right: 3 7 8 9 20 21
    list <a> (55)
        on left: 19 20 21
        on right: 4 10 11 12 20
    whether <a> (56)
        on left: 22
        on right: 13
    when <a> (57)
        on left: 23
        on right: 14
    from <a> (58)
        on left: 24
        on right: 15
    shift <a> (59)
        on left: 25
        on right: 16
    condition <a> (60)
        on left: 26 27 28 29 30 31
        on right: 22 23 25
    expression <a> (61)
        on left: 32 33 34 35 36 37 38 39 40 41 42 43 44
        on right: 10 11 12 17 18 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 42 45 46
    explist <a> (62)
        on left: 45 46
        on right: 43 44 46
    symlist <sl> (63)
        on left: 47 48
        on right: 4 48


State 0

    0 $accept: • START $end

    FROM     shift, and go to state 1
    WHEN     shift, and go to state 2
    WHETHER  shift, and go to state 3
    SHIFT    shift, and go to state 4
    MINUS    shift, and go to state 5
    ABS      shift, and go to state 6
    NUM      shift, and go to state 7
    ID       shift, and go to state 8
    FUNC     shift, and go to state 9
    '('      shift, and go to state 10

    FROM      [reduce using rule 6 (START)]
    WHEN      [reduce using rule 6 (START)]
    WHETHER   [reduce using rule 6 (START)]
    SHIFT     [reduce using rule 6 (START)]
    MINUS     [reduce using rule 6 (START)]
    ABS       [reduce using rule 6 (START)]
    NUM       [reduce using rule 6 (START)]
    ID        [reduce using rule 6 (START)]
    FUNC      [reduce using rule 6 (START)]
    '('       [reduce using rule 6 (START)]
    $default  reduce using rule 6 (START)

    START        go to state 11
    instruction  go to state 12
    statement    go to state 13
    whether      go to state 14
    when         go to state 15
    from         go to state 16
    shift        go to state 17
    expression   go to state 18


State 1

   24 from: FROM • expression TO expression ';' STEP expression '%' statements '%'

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 19


State 2

   12 statement: WHEN • expression UNTIL list
   23 when: WHEN • '(' condition ')' '%' statements '%' UNTIL '(' condition ')'

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 20

    expression  go to state 21


State 3

   10 statement: WHETHER • expression THEN list
   11          | WHETHER • expression THEN list OTHERWISE list
   22 whether: WHETHER • '(' condition ')' '%' statements '%' OTHERWISE '%' statements '%'

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 22

    expression  go to state 23


State 4

   25 shift: SHIFT • '(' expression ')' '%' EVENT '(' condition ')' ASSIGN expression '%'

    '('  shift, and go to state 24


State 5

   38 expression: MINUS • expression

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 25


State 6

   37 expression: ABS • expression ABS

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 26


State 7

   40 expression: NUM •

    $default  reduce using rule 40 (expression)


State 8

   41 expression: ID •
   42           | ID • ASSIGN expression
   44           | ID • '(' explist ')'

    ASSIGN  shift, and go to state 27
    '('     shift, and go to state 28

    ASSIGN    [reduce using rule 41 (expression)]
    '('       [reduce using rule 41 (expression)]
    $default  reduce using rule 41 (expression)


State 9

   43 expression: FUNC • '(' explist ')'

    '('  shift, and go to state 29


State 10

   39 expression: '(' • expression ')'

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 30


State 11

    0 $accept: START • $end
    1 START: START • instruction
    3      | START • statement EOL
    4      | START • DEFINE ID '(' symlist ')' ASSIGN list EOL
    5      | START • error EOL

    $end     shift, and go to state 31
    error    shift, and go to state 32
    FROM     shift, and go to state 1
    WHEN     shift, and go to state 2
    WHETHER  shift, and go to state 3
    DEFINE   shift, and go to state 33
    SHIFT    shift, and go to state 4
    MINUS    shift, and go to state 5
    ABS      shift, and go to state 6
    NUM      shift, and go to state 7
    ID       shift, and go to state 8
    FUNC     shift, and go to state 9
    '('      shift, and go to state 10

    instruction  go to state 34
    statement    go to state 35
    whether      go to state 14
    when         go to state 15
    from         go to state 16
    shift        go to state 17
    expression   go to state 18


State 12

    2 START: instruction •

    $default  reduce using rule 2 (START)


State 13

    7 instruction: statement •

    $default  reduce using rule 7 (instruction)


State 14

   13 statement: whether •

    $default  reduce using rule 13 (statement)


State 15

   14 statement: when •

    $default  reduce using rule 14 (statement)


State 16

   15 statement: from •

    $default  reduce using rule 15 (statement)


State 17

   16 statement: shift •

    $default  reduce using rule 16 (statement)


State 18

   17 statement: expression • ASSIGN expression
   18          | expression •
   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    MUL     shift, and go to state 38
    DIV     shift, and go to state 39
    ASSIGN  shift, and go to state 40
    CMP     shift, and go to state 41

    MINUS     [reduce using rule 18 (statement)]
    $default  reduce using rule 18 (statement)


State 19

   24 from: FROM expression • TO expression ';' STEP expression '%' statements '%'
   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression

    TO     shift, and go to state 42
    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MUL    shift, and go to state 38
    DIV    shift, and go to state 39
    CMP    shift, and go to state 41


State 20

   23 when: WHEN '(' • condition ')' '%' statements '%' UNTIL '(' condition ')'
   39 expression: '(' • expression ')'

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    condition   go to state 43
    expression  go to state 44


State 21

   12 statement: WHEN expression • UNTIL list
   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression

    UNTIL  shift, and go to state 45
    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MUL    shift, and go to state 38
    DIV    shift, and go to state 39
    CMP    shift, and go to state 41


State 22

   22 whether: WHETHER '(' • condition ')' '%' statements '%' OTHERWISE '%' statements '%'
   39 expression: '(' • expression ')'

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    condition   go to state 46
    expression  go to state 44


State 23

   10 statement: WHETHER expression • THEN list
   11          | WHETHER expression • THEN list OTHERWISE list
   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression

    THEN   shift, and go to state 47
    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MUL    shift, and go to state 38
    DIV    shift, and go to state 39
    CMP    shift, and go to state 41


State 24

   25 shift: SHIFT '(' • expression ')' '%' EVENT '(' condition ')' ASSIGN expression '%'

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 48


State 25

   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression
   38           | MINUS expression •

    $default  reduce using rule 38 (expression)


State 26

   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression
   37           | ABS expression • ABS

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MUL    shift, and go to state 38
    DIV    shift, and go to state 39
    ABS    shift, and go to state 49
    CMP    shift, and go to state 41


State 27

   42 expression: ID ASSIGN • expression

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 50


State 28

   44 expression: ID '(' • explist ')'

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 51
    explist     go to state 52


State 29

   43 expression: FUNC '(' • explist ')'

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 51
    explist     go to state 53


State 30

   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression
   39           | '(' expression • ')'

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MUL    shift, and go to state 38
    DIV    shift, and go to state 39
    CMP    shift, and go to state 41
    ')'    shift, and go to state 54


State 31

    0 $accept: START $end •

    $default  accept


State 32

    5 START: START error • EOL

    EOL  shift, and go to state 55


State 33

    4 START: START DEFINE • ID '(' symlist ')' ASSIGN list EOL

    ID  shift, and go to state 56


State 34

    1 START: START instruction •

    $default  reduce using rule 1 (START)


State 35

    3 START: START statement • EOL
    7 instruction: statement •

    EOL  shift, and go to state 57

    $default  reduce using rule 7 (instruction)


State 36

   33 expression: expression PLUS • expression

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 58


State 37

   34 expression: expression MINUS • expression

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 59


State 38

   35 expression: expression MUL • expression

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 60


State 39

   36 expression: expression DIV • expression

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 61


State 40

   17 statement: expression ASSIGN • expression

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 62


State 41

   32 expression: expression CMP • expression

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 63


State 42

   24 from: FROM expression TO • expression ';' STEP expression '%' statements '%'

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 64


State 43

   23 when: WHEN '(' condition • ')' '%' statements '%' UNTIL '(' condition ')'

    ')'  shift, and go to state 65


State 44

   26 condition: expression • EQ expression
   27          | expression • NOTEQUAL expression
   28          | expression • GT expression
   29          | expression • GE expression
   30          | expression • LT expression
   31          | expression • LE expression
   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression
   39           | '(' expression • ')'

    PLUS      shift, and go to state 36
    MINUS     shift, and go to state 37
    MUL       shift, and go to state 38
    DIV       shift, and go to state 39
    EQ        shift, and go to state 66
    GT        shift, and go to state 67
    GE        shift, and go to state 68
    LT        shift, and go to state 69
    LE        shift, and go to state 70
    NOTEQUAL  shift, and go to state 71
    CMP       shift, and go to state 41
    ')'       shift, and go to state 54


State 45

   12 statement: WHEN expression UNTIL • list

    FROM     shift, and go to state 1
    WHEN     shift, and go to state 2
    WHETHER  shift, and go to state 3
    SHIFT    shift, and go to state 4
    MINUS    shift, and go to state 5
    ABS      shift, and go to state 6
    NUM      shift, and go to state 7
    ID       shift, and go to state 8
    FUNC     shift, and go to state 9
    '('      shift, and go to state 10

    FROM      [reduce using rule 19 (list)]
    WHEN      [reduce using rule 19 (list)]
    WHETHER   [reduce using rule 19 (list)]
    SHIFT     [reduce using rule 19 (list)]
    MINUS     [reduce using rule 19 (list)]
    ABS       [reduce using rule 19 (list)]
    NUM       [reduce using rule 19 (list)]
    ID        [reduce using rule 19 (list)]
    FUNC      [reduce using rule 19 (list)]
    '('       [reduce using rule 19 (list)]
    $default  reduce using rule 19 (list)

    statement   go to state 72
    list        go to state 73
    whether     go to state 14
    when        go to state 15
    from        go to state 16
    shift       go to state 17
    expression  go to state 18


State 46

   22 whether: WHETHER '(' condition • ')' '%' statements '%' OTHERWISE '%' statements '%'

    ')'  shift, and go to state 74


State 47

   10 statement: WHETHER expression THEN • list
   11          | WHETHER expression THEN • list OTHERWISE list

    FROM     shift, and go to state 1
    WHEN     shift, and go to state 2
    WHETHER  shift, and go to state 3
    SHIFT    shift, and go to state 4
    MINUS    shift, and go to state 5
    ABS      shift, and go to state 6
    NUM      shift, and go to state 7
    ID       shift, and go to state 8
    FUNC     shift, and go to state 9
    '('      shift, and go to state 10

    FROM      [reduce using rule 19 (list)]
    WHEN      [reduce using rule 19 (list)]
    WHETHER   [reduce using rule 19 (list)]
    SHIFT     [reduce using rule 19 (list)]
    MINUS     [reduce using rule 19 (list)]
    ABS       [reduce using rule 19 (list)]
    NUM       [reduce using rule 19 (list)]
    ID        [reduce using rule 19 (list)]
    FUNC      [reduce using rule 19 (list)]
    '('       [reduce using rule 19 (list)]
    $default  reduce using rule 19 (list)

    statement   go to state 72
    list        go to state 75
    whether     go to state 14
    when        go to state 15
    from        go to state 16
    shift       go to state 17
    expression  go to state 18


State 48

   25 shift: SHIFT '(' expression • ')' '%' EVENT '(' condition ')' ASSIGN expression '%'
   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MUL    shift, and go to state 38
    DIV    shift, and go to state 39
    CMP    shift, and go to state 41
    ')'    shift, and go to state 76


State 49

   37 expression: ABS expression ABS •

    $default  reduce using rule 37 (expression)


State 50

   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression
   42           | ID ASSIGN expression •

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MUL    shift, and go to state 38
    DIV    shift, and go to state 39

    $default  reduce using rule 42 (expression)


State 51

   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression
   45 explist: expression •
   46        | expression • ',' explist

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MUL    shift, and go to state 38
    DIV    shift, and go to state 39
    CMP    shift, and go to state 41
    ','    shift, and go to state 77

    $default  reduce using rule 45 (explist)


State 52

   44 expression: ID '(' explist • ')'

    ')'  shift, and go to state 78


State 53

   43 expression: FUNC '(' explist • ')'

    ')'  shift, and go to state 79


State 54

   39 expression: '(' expression ')' •

    $default  reduce using rule 39 (expression)


State 55

    5 START: START error EOL •

    $default  reduce using rule 5 (START)


State 56

    4 START: START DEFINE ID • '(' symlist ')' ASSIGN list EOL

    '('  shift, and go to state 80


State 57

    3 START: START statement EOL •

    $default  reduce using rule 3 (START)


State 58

   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   33           | expression PLUS expression •
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression

    MUL  shift, and go to state 38
    DIV  shift, and go to state 39

    $default  reduce using rule 33 (expression)


State 59

   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   34           | expression MINUS expression •
   35           | expression • MUL expression
   36           | expression • DIV expression

    MUL  shift, and go to state 38
    DIV  shift, and go to state 39

    $default  reduce using rule 34 (expression)


State 60

   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   35           | expression MUL expression •
   36           | expression • DIV expression

    $default  reduce using rule 35 (expression)


State 61

   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression
   36           | expression DIV expression •

    $default  reduce using rule 36 (expression)


State 62

   17 statement: expression ASSIGN expression •
   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MUL    shift, and go to state 38
    DIV    shift, and go to state 39
    CMP    shift, and go to state 41

    $default  reduce using rule 17 (statement)


State 63

   32 expression: expression • CMP expression
   32           | expression CMP expression •
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MUL    shift, and go to state 38
    DIV    shift, and go to state 39

    CMP  error (nonassociative)

    $default  reduce using rule 32 (expression)


State 64

   24 from: FROM expression TO expression • ';' STEP expression '%' statements '%'
   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MUL    shift, and go to state 38
    DIV    shift, and go to state 39
    CMP    shift, and go to state 41
    ';'    shift, and go to state 81


State 65

   23 when: WHEN '(' condition ')' • '%' statements '%' UNTIL '(' condition ')'

    '%'  shift, and go to state 82


State 66

   26 condition: expression EQ • expression

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 83


State 67

   28 condition: expression GT • expression

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 84


State 68

   29 condition: expression GE • expression

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 85


State 69

   30 condition: expression LT • expression

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 86


State 70

   31 condition: expression LE • expression

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 87


State 71

   27 condition: expression NOTEQUAL • expression

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 88


State 72

   20 list: statement • ';' list
   21     | statement •

    ';'  shift, and go to state 89

    ';'       [reduce using rule 21 (list)]
    $default  reduce using rule 21 (list)


State 73

   12 statement: WHEN expression UNTIL list •

    $default  reduce using rule 12 (statement)


State 74

   22 whether: WHETHER '(' condition ')' • '%' statements '%' OTHERWISE '%' statements '%'

    '%'  shift, and go to state 90


State 75

   10 statement: WHETHER expression THEN list •
   11          | WHETHER expression THEN list • OTHERWISE list

    OTHERWISE  shift, and go to state 91

    OTHERWISE  [reduce using rule 10 (statement)]
    $default   reduce using rule 10 (statement)


State 76

   25 shift: SHIFT '(' expression ')' • '%' EVENT '(' condition ')' ASSIGN expression '%'

    '%'  shift, and go to state 92


State 77

   46 explist: expression ',' • explist

    MINUS  shift, and go to state 5
    ABS    shift, and go to state 6
    NUM    shift, and go to state 7
    ID     shift, and go to state 8
    FUNC   shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 51
    explist     go to state 93


State 78

   44 expression: ID '(' explist ')' •

    $default  reduce using rule 44 (expression)


State 79

   43 expression: FUNC '(' explist ')' •

    $default  reduce using rule 43 (expression)


State 80

    4 START: START DEFINE ID '(' • symlist ')' ASSIGN list EOL

    ID  shift, and go to state 94

    symlist  go to state 95


State 81

   24 from: FROM expression TO expression ';' • STEP expression '%' statements '%'

    STEP  shift, and go to state 96


State 82

   23 when: WHEN '(' condition ')' '%' • statements '%' UNTIL '(' condition ')'

    FROM     shift, and go to state 1
    WHEN     shift, and go to state 2
    WHETHER  shift, and go to state 3
    SHIFT    shift, and go to state 4
    MINUS    shift, and go to state 5
    ABS      shift, and go to state 6
    NUM      shift, and go to state 7
    ID       shift, and go to state 8
    FUNC     shift, and go to state 9
    '('      shift, and go to state 10

    statements  go to state 97
    statement   go to state 98
    whether     go to state 14
    when        go to state 15
    from        go to state 16
    shift       go to state 17
    expression  go to state 18


State 83

   26 condition: expression EQ expression •
   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MUL    shift, and go to state 38
    DIV    shift, and go to state 39
    CMP    shift, and go to state 41

    $default  reduce using rule 26 (condition)


State 84

   28 condition: expression GT expression •
   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MUL    shift, and go to state 38
    DIV    shift, and go to state 39
    CMP    shift, and go to state 41

    $default  reduce using rule 28 (condition)


State 85

   29 condition: expression GE expression •
   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MUL    shift, and go to state 38
    DIV    shift, and go to state 39
    CMP    shift, and go to state 41

    $default  reduce using rule 29 (condition)


State 86

   30 condition: expression LT expression •
   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MUL    shift, and go to state 38
    DIV    shift, and go to state 39
    CMP    shift, and go to state 41

    $default  reduce using rule 30 (condition)


State 87

   31 condition: expression LE expression •
   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MUL    shift, and go to state 38
    DIV    shift, and go to state 39
    CMP    shift, and go to state 41

    $default  reduce using rule 31 (condition)


State 88

   27 condition: expression NOTEQUAL expression •
   32 expression: expression • CMP expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | expression • MUL expression
   36           | expression • DIV expression

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MUL    shift, and go to state 38
    DIV    shift, and go to state 39
    CMP    shift, and go to state 41

    $default  reduce using rule 27 (condition)


State 89

   20 list: statement ';' • list

    FROM     shift, and go to state 1
    WHEN     shift, and go to state 2
    WHETHER  shift, and go to state 3
    SHIFT    shift, and go to state 4
    MINUS    shift, and go to state 5
    ABS      shift, and go to state 6
    NUM      shift, and go to state 7
    ID       shift, and go to state 8
    FUNC     shift, and go to state 9
    '('      shift, and go to state 10

    FROM      [reduce using rule 19 (list)]
    WHEN      [reduce using rule 19 (list)]
    WHETHER   [reduce using rule 19 (list)]
    SHIFT     [reduce using rule 19 (list)]
    MINUS     [reduce using rule 19 (list)]
    ABS       [reduce using rule 19 (list)]
    NUM       [reduce using rule 19 (list)]
    ID        [reduce using rule 19 (list)]
    FUNC      [reduce using rule 19 (list)]
    '('       [reduce using rule 19 (list)]
    $default  reduce using rule 19 (list)

    statement   go to state 72
    list        go to state 99
    whether     go to state 14
    when        go to state 15
    from        go to state 16
    shift       go to state 17
    expression  go to state 18


State 90

   22 whether: WHETHER '(' condition ')' '%' • statements '%' OTHERWISE '%' statements '%'

    FROM     shift, and go to state 1
    WHEN     shift, and go to state 2
    WHETHER  shift, and go to state 3
    SHIFT    shift, and go to state 4
    MINUS    shift, and go to state 5
    ABS      shift, and go to state 6
    NUM      shift, and go to state 7
    ID       shift, and go to state 8
    FUNC     shift, and go to state 9
    '('      shift, and go to state 10

    statements  go to state 100
    statement   go to state 98
    whether     go to state 14
    when        go to state 15
    from        go to state 16
    shift       go to state 17
    expression  go to state 18


State 91

   11 statement: WHETHER expression THEN list OTHERWISE • list

    FROM     shift, and go to state 1
    WHEN     shift, and go to state 2
    WHETHER  shift, and go to state 3
    SHIFT    shift, and go to state 4
    MINUS    shift, and go to state 5
    ABS      shift, and go to state 6
    NUM      shift, and go to state 7
    ID       shift, and go to state 8
    FUNC     shift, and go to state 9
    '('      shift, and go to state 10
